# anymodel

./: .coverage  .gitignore  CLAUDE.md  JOURNAL.md  Makefile  README.md  README.rst  SECURITY.md  TODO.md  docker-compose.yml  pyproject.toml
.github/workflows/: docs.yml  tests.yml
anymodel/: mapper.py
anymodel/storages/: base.py  filesystem.py  memory.py  short_long.py  sqlalchemy.py
anymodel/types/: collections.py  entity.py  mappings.py  relations.py  utils.py
anymodel/utilities/: __init__.py  identity_map.py  migrations.py
docs/: conf.py  index.rst
docs/guide/: concepts.rst  first-steps.rst
examples/crm/: Makefile  Procfile  README.md  pyproject.toml
examples/crm/crm/: __main__.py  api.py
examples/crm/crm/models/: contacts.py
examples/crm/crm/services/: __init__.py
examples/crm/crm/views/: contacts.py
examples/crm/frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
examples/crm/frontend/src/: App.tsx  index.css  main.tsx  routeTree.gen.ts
examples/crm/frontend/src/forms/: contacts.tsx
examples/crm/frontend/src/queries/: contacts.tsx
hdm/: __init__.py  __main__.py  entity.py  mapper.py  storage.py
hdm/storages/: __init__.py  base.py  filesystem.py  memory.py  sqlalchemy.py  write_ahead.py
hdm/types/: __init__.py  collections.py  entity.py  mappings.py  relations.py  utils.py
hdm/utilities/: identity_map.py  migrations.py
tests/: _models.py  test_entity.py  test_map_memory_then_file.py  test_mapper.py  test_public_api.py  test_storage.py
tests/utilities/: memory_storage.py
(+6 files in other folders)
