[project]
name = "hdm"
version = "0.1.0"
description = "Add your description here"
readme = "README.rst"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.9.2",
    "pyheck>=0.1.5",
    "sqlalchemy>=2.0.36",
]

[tool.ruff]
line-length = 120

[dependency-groups]
dev = [
    "pytest>=8.3.3",
]
